--- a/Sicsoft.Checkin.Web/Pages/Movimientos/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Movimientos/Editar.cshtml
@@ -2177,6 +2177,15 @@
                         <div>Persona Contacto: @Model.Llamada.PersonaContacto</div>
                         <div>Email Persona Contacto: @Model.Llamada.EmailPersonaContacto</div>
                         <div>Producto: @Model.ProductoPadre.codSAP - @Model.ProductoPadre.Nombre</div>
+                        @{
+                            var idCond =  Model.Cliente.idCondPago ;
+                        }
+                        <div>Condición de Pago: @(Model.Condiciones.Where(a => a.codSAP == idCond).FirstOrDefault() == null ? "" : Model.Condiciones.Where(a => a.codSAP == idCond).FirstOrDefault().Nombre)</div>
+
+                        <div>Técnico Encargado: @Model.Llamada.Tecnico -  @(Model.Tecnicos.FirstOrDefault() == null ? "" : Model.Tecnicos.FirstOrDefault().Nombre)</div>
+                        <div>Tipo Garantía: @Model.Llamada.Garantia -  @(Model.Garantias.Where(a => a.id == Model.Llamada.Garantia).FirstOrDefault() == null ? "N/A" : Model.Garantias.Where(a => a.id == Model.Llamada.Garantia).FirstOrDefault().Nombre)</div>
+
+
 
                         <div class="row col-sm-4">
 
