--- a/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
@@ -516,7 +516,12 @@
                         <div>Telefono: @Model.Llamada.NumeroPersonaContacto</div>
                         <div>Persona Contacto: @Model.Llamada.PersonaContacto</div>
                         <div>Email Persona Contacto: @Model.Llamada.EmailPersonaContacto</div>
-
+                        @{
+                            var idCond =  Model.Cliente.idCondPago ;
+                        }
+                        <div>Condición de Pago: @(Model.Condiciones.Where(a => a.codSAP == idCond).FirstOrDefault() == null ? "" : Model.Condiciones.Where(a => a.codSAP == idCond).FirstOrDefault().Nombre)</div>
+                        <div>Técnico Encargado: @Model.Llamada.Tecnico -  @(Model.Tecnicos.FirstOrDefault() == null ? "" : Model.Tecnicos.FirstOrDefault().Nombre)</div>
+                        <div>Tipo Garantía: @Model.Llamada.Garantia -  @(Model.Garantias.Where(a => a.id == Model.Llamada.Garantia).FirstOrDefault() == null ? "N/A" : Model.Garantias.Where(a => a.id == Model.Llamada.Garantia).FirstOrDefault().Nombre)</div>
                         <div class="row col-sm-4">
 
                             <div class="form-group">
